<?xml version="1.0" encoding="utf-8"?>

    <ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:background="#ffffff"
   
    
    >
    <LinearLayout
  
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
   android:layout_marginLeft="6px"
   android:background="@drawable/howytu"
       android:layout_marginRight="6px"
  >
          
  <TextView android:text="How to use this app" 
       android:id="@+id/tView121" 
      
       android:textStyle="bold"
       android:textSize="20px"
       android:layout_gravity="center"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content"
       android:layout_marginTop="6px"
       android:layout_marginBottom="15px"
       ></TextView>
    
   
     
      <TextView android:text="@string/s1" 
       android:id="@+id/tView1" 
       android:textStyle="bold"
   
       android:textSize="20px"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
          android:layout_marginLeft="10px"
       android:layout_marginRight="10px"></TextView>
       <TextView android:text="@string/howtotext1" 
       android:id="@+id/tView1" 
   
    
       android:textSize="15dp"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
       android:layout_marginRight="10dp"></TextView>
       <View
         android:layout_marginTop="6px"
        android:layout_marginBottom="6px"  
         android:layout_marginLeft="10dp"
       android:layout_marginRight="10dp" 
        android:background="#C2DFFF"
        android:layout_height="1dip"
        android:layout_width="fill_parent" 
       
        />
       
       
      <TextView android:text="@string/s3i" 
       android:id="@+id/tView1" 
       android:textStyle="bold"
       android:textSize="15dp"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content"
       android:layout_marginLeft="10dp"
       android:layout_marginRight="10dp"></TextView>
      <TextView android:text="@string/s3id" 
       android:id="@+id/tView1" 
         android:textSize="15dp"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
        android:layout_marginLeft="10dp"
       android:layout_marginRight="10dp"></TextView>
  <View
		
        android:layout_marginBottom="6px"  
         android:layout_marginLeft="10dp"
       android:layout_marginRight="10dp" 
        android:background="#C2DFFF"
        android:layout_height="1dip"
        android:layout_width="fill_parent" 
       
        />
      <TextView
          android:id="@+id/textView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Example"
              android:layout_marginLeft="10dp"
             android:textStyle="bold"
          android:textSize="15dp"
          />

      <TextView
          android:id="@+id/textView2"
           android:layout_marginLeft="10dp"
       android:layout_marginRight="10dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/s3" />
       
             <Button android:layout_width="fill_parent" 
      android:id="@+id/startb" android:text="Start App" 
      android:layout_marginTop="10dp"
      android:focusable="false"
      android:layout_height="wrap_content"></Button>
    </LinearLayout>
</ScrollView>